--- a/ClinicaOdontologica/appsettings.json
+++ b/ClinicaOdontologica/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "CadenaConexion": "server=localhost; port=3306; user=root; password=root; database=clinicaodontologica;"
+    "CadenaConexion": ""
   },
   "Logging": {
     "LogLevel": {
